# yts

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main copy.yml  main copy.yml_copy  main.yml
yts/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile copy.prod  Dockerfile.prod  prod.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
yts/app/: config.py  main.py  summarizer.py
yts/app/api/: crud.py  summaries.py
yts/frontend/: Dockerfile  main.py
yts/tests/: conftest.py  test_summaries.py  test_summaries_unit.py
